Added header comments to the controller classes

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>Daily Calorie Tracker</name>
     <groupId>MPM</groupId>
     <artifactId>CalorieCounter</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <developers>
         <developer>
